--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,36 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>AcademiaUnipro</title>
+  <title>ACADEMIA UNIPROTEC</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/ACADEMIAICON.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
+
+  <!-- Meta tags básicos -->
+  <meta name="description" content="Academia Uniprotec - Plataforma educativa de capacitación industrial">
+
+  <!-- Open Graph Meta Tags (Facebook, WhatsApp, LinkedIn) -->
+  <meta property="og:title" content="ACADEMIA UNIPROTEC">
+  <meta property="og:description" content="Academia Uniprotec - Plataforma educativa de capacitación industrial">
+  <meta property="og:image" content="https://www.academia.uniprotec.net/assets/images/ACADEMIAICON.png">
+  <meta property="og:url" content="https://www.academia.uniprotec.net">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="ACADEMIA UNIPROTEC">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ACADEMIA UNIPROTEC">
+  <meta name="twitter:description" content="Academia Uniprotec - Plataforma educativa de capacitación industrial">
+  <meta name="twitter:image" content="https://www.academia.uniprotec.net/assets/images/ACADEMIAICON.png">
+
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
